# SimpleFileSync

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  README.org  TODO.org  cmake_install.cmake
client/: .dir-locals.el  CMakeLists.txt  Makefile  cmake_install.cmake
client/.cache/clangd/index/: app.cpp.6CD0D7D37A67ABE7.idx  app.hpp.54DD27E6BB025851.idx  config.cpp.5FE04CA7E7A3F4AA.idx  config.hpp.F68C251636DA7811.idx  file_watcher.cpp.2C143F4D899388EE.idx  file_watcher.hpp.7B5ED66824A31C04.idx  main.cpp.B92536825E22F2B2.idx  message.cpp.ECC3A6EF3F422094.idx  message.hpp.A2CEE59C52CED4E7.idx  serializer.hpp.091DB04A91E2B40F.idx
client/data/: config.conf
client/include/: app.hpp  app_data.hpp  client_app.hpp  client_socket.hpp  config.hpp  file_watcher.hpp
client/src/: app.cpp  app_data.cpp  client_app.cpp  client_socket.cpp  config.cpp  file_watcher.cpp  main.cpp
example/: client.conf  server.conf
sample/: client.conf  example.client_systemd.service  example.server_systemd.service  server.conf
server/: .dir-locals.el  CMakeLists.txt  Makefile  cmake_install.cmake
server/data/: config.conf
server/include/: app.hpp  config.hpp  server.hpp  server_app.hpp  server_socket.hpp  socket_buffer.hpp  socket_connection.hpp
server/src/: app.cpp  config.cpp  main.cpp  server.cpp  server_app.cpp  server_socket.cpp  socket_connection.cpp
shared/: .dir-locals.el  CMakeLists.txt  Makefile  cmake_install.cmake
shared/include/: base_config.hpp  client_message.hpp  deserializer.hpp  environment.hpp  event.hpp  event_ledger.hpp  hash_calculator.hpp  message.hpp  program_options.hpp  save_area.hpp  serializable.hpp  serializer.hpp  server_message.hpp  state.hpp  stringable.hpp  type.hpp  util.hpp
shared/src/: .#program_options.cpp  base_config.cpp  client_message.cpp  environment.cpp  event.cpp  event_ledger.cpp  hash_calculator.cpp  logger.cpp  message.cpp  program_options.cpp  save_area.cpp  server_message.cpp  state.cpp
tools/: erase-state.sh  example.client_systemd.service  example.server_systemd.service  generate-ssl.sh  install-client-service.sh  install-server-service.sh  make-data-dirs.sh  make_data_dirs.sh
